# PrimitiveArray

./: .buildbot-devel  .drone.yml  .travis.yml  LICENSE  PrimitiveArray.cabal  README.md  cabal.project  changelog  changelog.md  default.nix  devel-stack.yaml  nightly-stack.yaml  package-properties.nix  package.nix  shell.nix  stack.yaml
.github/workflows/: ci.yml  hackage.yml
Data/: ExtShape.hs  PrimitiveArray.hs
Data/Array/Repa/: Bytes.hs  ExtShape.hs
Data/Array/Repa/Index/: Lens.hs  Outside.hs  Point.hs  Points.hs  Set.hs  Subword.hs
Data/PrimitiveArray/: Checked.hs  Class.hs  Dense.hs  FillTable.hs  FillTables.hs  HashTable.hs  Index.hs  QuickCheck.hs  ScoreMatrix.hs  Sparse.hs  Unboxed.hs  UpperTriangular.hs  Zero.hs
Data/PrimitiveArray/Index/: BS0.hs  BS1.hs  BS2.hs  BitSet0.hs  BitSet1.hs  BitSetClasses.hs  Class.hs  Complement.hs  EdgeBoundary.hs  IOC.hs  Int.hs  Outside.hs  PhantomInt.hs  Point.hs  Points.hs  QuickCheck.hs  Set.hs  Subword.hs  Unit.hs
Data/PrimitiveArray/QuickCheck/Index/: Set.hs
Data/PrimitiveArray/Sparse/: BinSearch.hs  IntBinSearch.hs
Data/PrimitiveArray/Unboxed/: VectorZero.hs  Zero.hs
Data/PrimitiveArray/UpperTriangular/: Unboxed.hs
Data/PrimitiveArray/Vector/: Compat.hs
Data/PrimitiveArray/Zero/: Unboxed.hs
_cemetery/1/: Zero.hs
_cemetery/2/Array/Repa/Index/: Outside.hs  Set.hs  Subword.hs
_cemetery/Internal/: Unboxed.hs
_old/Data/: PrimitiveArray.hs
bench/: Lookup.hs
lib/Data/: PrimitiveArray.hs
lib/Data/PrimitiveArray/: Checked.hs  Class.hs  Dense.hs  Index.hs  Sparse.hs  SparseSearch.hs
lib/Data/PrimitiveArray/Index/: BitSet0.hs  BitSetClasses.hs  Class.hs  Int.hs  PhantomInt.hs  Point.hs  Subword.hs  TernarySet.hs
lib/Data/PrimitiveArray/Sparse/: BinSearch.hs  IntBinSearch.hs
old/: BS0.hs  FillTables.hs  QC-Set.hs  Set.hs
tests/: Common.hs  QuickCheck.hs  SmallCheck.hs  properties.hs
