Name:           PrimitiveArray
Version:        0.6.0.0
License:        BSD3
License-file:   LICENSE
Author:         Christian Hoener zu Siederdissen
Maintainer:     choener@tbi.univie.ac.at
Copyright:      Christian Hoener zu Siederdissen, 2010-2014
Homepage:       http://www.tbi.univie.ac.at/~choener/
Stability:      Experimental
Category:       Data
Build-type:     Simple
Cabal-version:  >=1.6
Synopsis:
                Efficient multidimensional arrays
Description:
                This library provides efficient multidimensional arrays. Import
                @Data.PrimitiveArray@ for indices, lenses, and arrays.
                .
                In general all operations are (highly) unsafe, no
                bounds-checking or other sanity-checking is performed.
                Operations are aimed toward efficiency as much as possible.

extra-source-files:
  changelog.md

Library
  Exposed-modules:
    Data.Array.Repa.ExtShape
    Data.Array.Repa.Index.Lens
    Data.Array.Repa.Index.Outside
    Data.Array.Repa.Index.Point
    Data.Array.Repa.Index.Points
    Data.Array.Repa.Index.Subword
    Data.PrimitiveArray
    Data.PrimitiveArray.Class
    Data.PrimitiveArray.FillTables
    Data.PrimitiveArray.QuickCheck
    Data.PrimitiveArray.Zero
  Build-depends:
    deepseq         == 1.3.*    ,
-- TODO move 'lens' to ADPfusion-lens together with other lens stuff
    lens            == 4.*      ,
    primitive       == 0.5.*    ,
    QuickCheck      == 2.*      ,
    repa            == 3.2.*    ,
    vector          == 0.10.*   ,
    vector-th-unbox == 0.2.*    ,
    base            == 4.*
  ghc-options:
    -O2
    -funbox-strict-fields

source-repository head
  type: git
  location: git://github.com/choener/PrimitiveArray

