Name:           PrimitiveArray
Version:        0.6.0.0
License:        BSD3
License-file:   LICENSE
Author:         Christian Hoener zu Siederdissen
Maintainer:     choener@tbi.univie.ac.at
Copyright:      Christian Hoener zu Siederdissen, 2010-2014
Homepage:       http://www.tbi.univie.ac.at/~choener/
Stability:      Experimental
Category:       Data
Build-type:     Simple
Cabal-version:  >=1.6
Synopsis:
                Efficient multidimensional arrays
Description:
                This library provides efficient multidimensional arrays. Import
                @Data.PrimitiveArray@ for indices, lenses, and arrays.
                .
                For ADPfusion users, the library also provides the machinary to
                fill tables in the correct order required by usual CYK-style
                parsers, or regular grammars (used e.g. in alignment
                algorithms). This means that unless your grammar require a
                strange order in which parsing is to be performed, it will
                mostly "just work".
                .
                In general all operations are (highly) unsafe, no
                bounds-checking or other sanity-checking is performed.
                Operations are aimed toward efficiency as much as possible.

extra-source-files:
  changelog.md

Library
  Exposed-modules:
    Data.Array.Repa.Bytes
    Data.Array.Repa.ExtShape
    Data.Array.Repa.Index.Lens
    Data.Array.Repa.Index.Outside
    Data.Array.Repa.Index.Points
    Data.Array.Repa.Index.Set
    Data.Array.Repa.Index.Subword
    Data.PrimitiveArray.Index.Class
--    Data.PrimitiveArray.Index.Outside
--    Data.PrimitiveArray.Index.Set
    Data.PrimitiveArray
    Data.PrimitiveArray.Class
    Data.PrimitiveArray.FillTables
    Data.PrimitiveArray.QuickCheck
    Data.PrimitiveArray.Zero
  Build-depends: base                     == 4.*
               , aeson                    == 0.8.*
               , binary                   == 0.7.*
               , bits                     == 0.4.*
               , cereal                   == 0.4.*
               , deepseq                  == 1.3.*
               , OrderedBits              == 0.0.*
               , primitive                == 0.5.*
               , QuickCheck               == 2.*
               , repa                     == 3.3.*
               , vector                   == 0.10.*
               , vector-binary-instances  == 0.2.*
               , vector-th-unbox          == 0.2.*
  ghc-options:
    -O2
    -funbox-strict-fields

source-repository head
  type: git
  location: git://github.com/choener/PrimitiveArray

