Name:           PrimitiveArray
Version:        0.6.0.0
License:        BSD3
License-file:   LICENSE
Author:         Christian Hoener zu Siederdissen
Maintainer:     choener@bioinf.uni-leipzig.de
Copyright:      Christian Hoener zu Siederdissen, 2010 - 2015
Homepage:       http://www.bioinf.uni-leipzig.de/~choener/
Stability:      Experimental
Category:       Data
Build-type:     Simple
Cabal-version:  >=1.10.0
Synopsis:
                Efficient multidimensional arrays
Description:
                This library provides efficient multidimensional arrays. Import
                @Data.PrimitiveArray@ for indices, lenses, and arrays.
                .
                For ADPfusion users, the library also provides the machinary to
                fill tables in the correct order required by usual CYK-style
                parsers, or regular grammars (used e.g. in alignment
                algorithms). This means that unless your grammar require a
                strange order in which parsing is to be performed, it will
                mostly "just work".
                .
                In general all operations are (highly) unsafe, no
                bounds-checking or other sanity-checking is performed.
                Operations are aimed toward efficiency as much as possible.

extra-source-files:
  changelog.md

Library
  Exposed-modules:
    Data.PrimitiveArray
    Data.PrimitiveArray.Class
    Data.PrimitiveArray.Dense
    Data.PrimitiveArray.FillTables
    Data.PrimitiveArray.Index
    Data.PrimitiveArray.Index.Class
    Data.PrimitiveArray.Index.Complement
    Data.PrimitiveArray.Index.Int
    Data.PrimitiveArray.Index.Outside
    Data.PrimitiveArray.Index.Point
    Data.PrimitiveArray.Index.Set
    Data.PrimitiveArray.Index.Subword
    Data.PrimitiveArray.QuickCheck.Index.Set
  build-depends: base                     >= 4.7      && < 4.9
               , aeson                    == 0.8.*
               , binary                   == 0.7.*
               , bits                     == 0.4.*
               , cereal                   == 0.4.*
               , deepseq                  >= 1.3      && < 1.5
               , OrderedBits              == 0.0.*
               , primitive                == 0.5.*
               , QuickCheck               >= 2.7      && < 2.9
               , vector                   == 0.10.*
               , vector-binary-instances  == 0.2.*
               , vector-th-unbox          == 0.2.*
  default-extensions: BangPatterns
                    , DefaultSignatures
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , MultiParamTypeClasses
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances
  default-language: Haskell2010
  ghc-options:
    -O2
    -funbox-strict-fields



test-suite properties
  type:
    exitcode-stdio-1.0
  main-is:
    properties.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  default-extensions: TemplateHaskell
  build-depends: base
               , PrimitiveArray
               , QuickCheck
               , test-framework               >= 0.8  && < 0.9
               , test-framework-quickcheck2   >= 0.3  && < 0.4
               , test-framework-th            >= 0.2  && < 0.3



source-repository head
  type: git
  location: git://github.com/choener/PrimitiveArray

